--- a/projects.html
+++ b/projects.html
@@ -147,32 +147,28 @@
         <div class="project-card">
             <div class="project-header">
                 <div class="project-title-group">
-                    <h3 class="project-title">Study Group Finder App</h3>
+                    <h3 class="project-title">Python Matrix Iteration Simulation</h3>
                 </div>
-                <span class="project-timeline">Jan 2024 - Present</span>
+                <span class="project-timeline">December 2024</span>
             </div>
             <div class="project-description">
-                <p>A comprehensive platform designed to help students find study partners for specific subjects, facilitating collaborative learning and academic success.</p>
+                <p>Implemented multiprocessing to efficiently process a 10,000x10,000 matrix over 100 iterations, optimizing performance with a 12 hour run time.</p>
             </div>
             <div class="key-features">
                 <h4>Key Features</h4>
                 <ul>
-                    <li>User Profiles with academic major and course details</li>
-                    <li>Course Management system</li>
-                    <li>User Preferences matching</li>
+                    <li>Modular Design</li>
+                    <li>Multiprocessing Optimization</li>
+                    <li>Character Values Converter</li>
                     <li>Advanced Matching System based on compatibility</li>
                 </ul>
             </div>
             <div class="skills-section">
                 <h4>Technologies & Skills</h4>
                 <div class="skills-grid">
-                    <span class="skill-tag">React.js</span>
-                    <span class="skill-tag">Node.js</span>
-                    <span class="skill-tag">MongoDB</span>
-                    <span class="skill-tag">User Authentication</span>
-                    <span class="skill-tag">RESTful APIs</span>
-                    <span class="skill-tag">Matching Algorithms</span>
-                    <span class="skill-tag">UI/UX Design</span>
+                    <span class="skill-tag">Python</span>
+                    <span class="skill-tag">Multiprocessing</span>
+                    <span class="skill-tag">Enumeration</span>
                 </div>
             </div>
         </div>
@@ -181,32 +177,27 @@
         <div class="project-card">
             <div class="project-header">
                 <div class="project-title-group">
-                    <h3 class="project-title">Grading Platform</h3>
+                    <h3 class="project-title">Lexical Analyzer/h3>
                 </div>
-                <span class="project-timeline">Sep 2023 - Dec 2023</span>
+                <span class="project-timeline">September 2024</span>
             </div>
             <div class="project-description">
-                <p>A comprehensive grading platform that streamlines the grading process for instructors and provides clear grade visibility for students.</p>
+                <p>Developed a lexical analyzer to tokenize and classify input based on predefined lexical rules and implemented regular expressions to identify keywords, identifiers, operators, and literals.</p>
             </div>
             <div class="key-features">
                 <h4>Key Features</h4>
                 <ul>
-                    <li>Instructor Dashboard with course management</li>
-                    <li>Student Portal with progress tracking</li>
-                    <li>Automated Grade Calculation</li>
-                    <li>Integrated Feedback System</li>
+                    <li>Tokenization</li>
+                    <li>Error Handling</li>
+                    <li>Performance Optimization</li>
                 </ul>
             </div>
             <div class="skills-section">
                 <h4>Technologies & Skills</h4>
                 <div class="skills-grid">
-                    <span class="skill-tag">Vue.js</span>
-                    <span class="skill-tag">Python</span>
-                    <span class="skill-tag">PostgreSQL</span>
-                    <span class="skill-tag">Data Visualization</span>
-                    <span class="skill-tag">Authentication</span>
-                    <span class="skill-tag">Real-time Updates</span>
-                    <span class="skill-tag">Dashboard Design</span>
+                    <span class="skill-tag">C Language</span>
+                    <span class="skill-tag">Hash Tables</span>
+                    <span class="skill-tag">Pointer Allocation</span>
                 </div>
             </div>
         </div>
@@ -215,100 +206,30 @@
         <div class="project-card">
             <div class="project-header">
                 <div class="project-title-group">
-                    <h3 class="project-title">Campus Navigation System</h3>
+                    <h3 class="project-title">Python WIne Acidity Rating</h3>
                 </div>
-                <span class="project-timeline">May 2023 - Aug 2023</span>
+                <span class="project-timeline">April 2023</span>
             </div>
             <div class="project-description">
-                <p>A user-friendly navigation system specifically designed for TTU campus, helping students locate essential services and navigate efficiently.</p>
+                <p> Developed 50% of a two-man team Python project, analyzing red wine quality using statistical techniques.</p>
             </div>
             <div class="key-features">
                 <h4>Key Features</h4>
                 <ul>
-                    <li>Interactive Campus Map with multiple views</li>
-                    <li>Service Locator with detailed information</li>
-                    <li>Categorized Service Directory</li>
+                    <li>Collaborative Python project development</li>
+                    <li>Data visualization with heatmaps</li>
+                    <li>Statistical techniques for analysis</li>
                 </ul>
             </div>
             <div class="skills-section">
                 <h4>Technologies & Skills</h4>
                 <div class="skills-grid">
-                    <span class="skill-tag">Google Maps API</span>
-                    <span class="skill-tag">React Native</span>
-                    <span class="skill-tag">Geolocation</span>
-                    <span class="skill-tag">Firebase</span>
-                    <span class="skill-tag">Mobile Development</span>
-                    <span class="skill-tag">Location Services</span>
-                    <span class="skill-tag">Maps Integration</span>
+                    <span class="skill-tag">Python</span>
+                    <span class="skill-tag">Collaboration</span>
+                    <span class="skill-tag">Pandas, NumPy</span>
                 </div>
             </div>
-        </div>
-
-        <!-- Mental Health Support App -->
-        <div class="project-card">
-            <div class="project-header">
-                <div class="project-title-group">
-                    <h3 class="project-title">Mental Health Support App</h3>
-                </div>
-                <span class="project-timeline">Jan 2023 - Apr 2023</span>
-            </div>
-            <div class="project-description">
-                <p>A centralized platform providing mental health resources and support services for TTU students, making it easier to access appropriate help.</p>
-            </div>
-            <div class="key-features">
-                <h4>Key Features</h4>
-                <ul>
-                    <li>Comprehensive Resource Directory</li>
-                    <li>Appointment Scheduler</li>
-                    <li>Wellness Routine Tracker</li>
-                </ul>
-            </div>
-            <div class="skills-section">
-                <h4>Technologies & Skills</h4>
-                <div class="skills-grid">
-                    <span class="skill-tag">Flutter</span>
-                    <span class="skill-tag">Firebase</span>
-                    <span class="skill-tag">Calendar Integration</span>
-                    <span class="skill-tag">Health Data Management</span>
-                    <span class="skill-tag">Privacy & Security</span>
-                    <span class="skill-tag">API Integration</span>
-                    <span class="skill-tag">Cross-platform Development</span>
-                </div>
-            </div>
-        </div>
-
-        <!-- Job Application Tracker -->
-        <div class="project-card">
-            <div class="project-header">
-                <div class="project-title-group">
-                    <h3 class="project-title">Job Application Tracker</h3>
-                </div>
-                <span class="project-timeline">Sep 2022 - Dec 2022</span>
-            </div>
-            <div class="project-description">
-                <p>A comprehensive tool for students to manage their job applications, track progress, and prepare for interviews effectively.</p>
-            </div>
-            <div class="key-features">
-                <h4>Key Features</h4>
-                <ul>
-                    <li>Application Dashboard with status tracking</li>
-                    <li>Deadline Reminder System</li>
-                    <li>Document Management</li>
-                </ul>
-            </div>
-            <div class="skills-section">
-                <h4>Technologies & Skills</h4>
-                <div class="skills-grid">
-                    <span class="skill-tag">React.js</span>
-                    <span class="skill-tag">Node.js</span>
-                    <span class="skill-tag">MongoDB</span>
-                    <span class="skill-tag">Cloud Storage</span>
-                    <span class="skill-tag">Notification System</span>
-                    <span class="skill-tag">Document Processing</span>
-                    <span class="skill-tag">State Management</span>
-                </div>
-            </div>
-        </div>
+        </div>    
     </div>
 </body>
 </html>
