--- a/index.html
+++ b/index.html
@@ -218,18 +218,18 @@
 <body>
     <div class="container">
         <nav>
-            <a href="index.html" class="name-title">Maaz Amjad</a>
+            <a href="index.html" class="name-title">Sarah Gillie</a>
             <div class="nav-links">
                 <a href="projects.html">Projects</a>
-                <a href="files/Maaz_cv.pdf" target="_blank">CV</a>
+                <a href="files/cv.pdf" target="_blank">CV</a>
             </div>
         </nav>
 
         <div class="profile-section">
             <div class="profile-sidebar">
-                <img src="images/profile.jpg" alt="Profile Picture" class="profile-image">
-                <h1>Maaz Amjad</h1>
-                <p class="interests">Interests in AI, Human Computer Interaction.</p>
+                <img src="images/profiles.jpg" alt="Profile Picture" class="profile-image">
+                <h1>Sarah Gillie</h1>
+                <p class="interests">Interests front-end software development.</p>
                 <div class="social-links">
                     <a href="#" class="social-link location">
                         <i class="fas fa-map-marker-alt"></i>
@@ -239,21 +239,17 @@
                         <img src="images/logo.png" alt="TTU Logo" class="ttu-logo">
                         Texas Tech University
                     </a>
-                    <a href="mailto:maaz.amjad@ttu.edu" class="social-link email">
+                    <a href="mailto:sgillie@ttu.edu" class="social-link email">
                         <i class="fas fa-envelope"></i>
                         Email
                     </a>
-                    <a href="https://github.com/MaazAmjad" class="social-link github" target="_blank">
+                    <a href="https://github.com/sgillie123" class="social-link github" target="_blank"> 
                         <i class="fab fa-github"></i>
                         Github
                     </a>
-                    <a href="https://www.linkedin.com/in/maazmjad/" class="social-link linkedin" target="_blank">
+                    <a href="https://www.linkedin.com/in/sarahgillie-/">
                         <i class="fab fa-linkedin"></i>
                         LinkedIn
-                    </a>
-                    <a href="https://x.com/MaazAmjad13" class="social-link twitter" target="_blank">
-                        <i class="fab fa-x-twitter"></i>
-                        X (formerly Twitter)
                     </a>
                 </div>
             </div>
@@ -261,19 +257,15 @@
             <div class="main-content">
                 <h2>About me</h2>
                 <div class="content-block">
-                    <p>I am a Junion Computer Science student at <a href="https://www.ttu.edu" class="highlight-link" target="_blank">Texas Tech University</a>, where I've developed a strong foundation in software development. Currently, I'm working on my senior thesis project focused on developing machine learning solutions for healthcare applications, under the guidance of <a href="#" class="highlight-link">Dr. [Advisor Name]</a>.</p>
+                    <p>I am a Junior Computer Science student at <a href="https://www.ttu.edu" class="highlight-link" target="_blank">Texas Tech University</a>, where I've developed a strong foundation in software development. Currently, I'm working on my academics and personal projects focusing on strengtening my coding skills and front-end software engineering, under the guidance of my professors.</a>.</p>
                 </div>
 
                 <div class="content-block">
-                    <p>During my academic career, I've maintained a 3.8 GPA while gaining hands-on experience in full-stack development, data structures, and algorithm design. I've served as a teaching assistant for the Introduction to Programming course and led the university's AI Student Society, organizing workshops and hackathons.</p>
+                    <p>During my academic career, I've continued gaining hands-on experience in software engineering, data structures, and algorithm design, with an interest on AI research and Software Engineering.  </p>
                 </div>
 
                 <div class="content-block">
-                    <p>My technical interests center around machine learning and human-computer interaction. I recently completed a summer internship at <a href="#" class="highlight-link">[Tech Company]</a>, where I contributed to developing a real-time data analytics dashboard using React and Node.js. I'm particularly passionate about creating accessible and user-friendly applications that solve practical problems.</p>
-                </div>
-
-                <div class="content-block">
-                    <p>Beyond academics, I'm an avid participant in competitive programming contests and have represented Texas Tech in regional hackathons. I enjoy contributing to open-source projects and mentoring junior students in programming fundamentals. When I'm not coding, you can find me exploring photography or playing chess at our university's chess club.</p>
+                    <p>Beyond academics, I'm currently an active member of clubs such as The National SOciety of Black Engineers, and Colorstack, both who strive to increase the number of sucessful black engineers educationally and profesionally. </p>
                 </div>
             </div>
         </div>
