--- a/cv.html
+++ b/cv.html
@@ -46,7 +46,7 @@
 <body>
     <div class="container">
         <nav>
-            <a href="#" class="name-title">Maaz Amjad</a>
+            <a href="#" class="name-title">Sarah Gillie</a>
             <div class="nav-links">
                 <a href="#projects">Projects</a>
                 <a href="#cv">CV</a>
@@ -56,7 +56,7 @@
         <!-- Other sections remain the same -->
 
         <section id="cv" class="cv-section">
-            <a href="files/Resume.pdf" class="cv-download-button" target="_blank">
+            <a href="files/Resumes.pdf" class="cv-download-button" target="_blank">
                 <svg class="cv-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M12 2v13m0 0l-3-3m3 3l3-3M3 17v3a2 2 0 002 2h14a2 2 0 002-2v-3"/>
                 </svg>
