--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                 </div>
 
                 <div class="content-block">
-                    <p>Beyond academics, I'm currently an active member of clubs such as The National SOciety of Black Engineers, and Colorstack, both who strive to increase the number of sucessful black engineers educationally and profesionally. </p>
+                    <p>Beyond academics, I'm currently an active member of clubs such as The National Society of Black Engineers, and Colorstack, both who strive to increase the number of sucessful black engineers educationally and profesionally. </p>
                 </div>
             </div>
         </div>
