--- a/projects.html
+++ b/projects.html
@@ -177,7 +177,7 @@
         <div class="project-card">
             <div class="project-header">
                 <div class="project-title-group">
-                    <h3 class="project-title">Lexical Analyzer/h3>
+                    <h3 class="project-title">Lexical Analyzer</h3>
                 </div>
                 <span class="project-timeline">September 2024</span>
             </div>
